--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,9 +9,7 @@
     //outside shad cn ui
     "baseUrl": ".",
     "paths": {
-      "@/*": [
-        "./src/*"
-      ]
+      "@/*": ["./src/*"]
     },
     //outside shad cn ui
 
