--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prettier": "npx prettier --write ."
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "@reduxjs/toolkit": "^2.2.7",
